Minor alignment fixes

--- a/christmas-advent-calendar/src/app/calendar/calendar.component.css
+++ b/christmas-advent-calendar/src/app/calendar/calendar.component.css
@@ -4,6 +4,7 @@
     grid-gap: 20px;
     grid-template-columns: auto auto auto auto auto auto;
     justify-content: center;
+    display: flex;
     font-family: 'della_respiraregular', georgia, serif;
 }
 
@@ -13,6 +14,7 @@
     grid-gap: 20px;
     grid-template-columns: auto auto auto auto auto auto;
     justify-content: center;
+    display: flex;
     font-family: 'della_respiraregular', georgia, serif;
 }
 
@@ -22,6 +24,7 @@
     grid-gap: 20px;
     grid-template-columns: auto auto auto auto auto auto;
     justify-content: center;
+    display: flex;
     font-family: 'della_respiraregular', georgia, serif;
 }
 
@@ -31,6 +34,7 @@
     grid-gap: 20px;
     grid-template-columns: auto auto auto auto auto auto;
     justify-content: center;
+    display: flex;
     font-family: 'della_respiraregular', georgia, serif;
 }
 
@@ -40,6 +44,7 @@
     grid-gap: 20px;
     grid-template-columns: auto auto auto auto auto auto;
     justify-content: center;
+    display: flex;
     font-family: 'della_respiraregular', georgia, serif;
 }
 
@@ -49,6 +54,7 @@
     grid-gap: 20px;
     grid-template-columns: auto auto auto auto auto auto;
     justify-content: center;
+    display: flex;
     font-family: 'della_respiraregular', georgia, serif;
 }
 
@@ -58,6 +64,7 @@
     grid-gap: 20px;
     grid-template-columns: auto auto auto auto auto auto;
     justify-content: center;
+    display: flex;
     font-family: 'della_respiraregular', georgia, serif;
 }
 
@@ -67,6 +74,7 @@
     grid-gap: 20px;
     grid-template-columns: auto auto auto auto auto auto;
     justify-content: center;
+    display: flex;
     font-family: 'della_respiraregular', georgia, serif;
 }
 
